@@ -15,6 +15,7 @@
     <setting id="RR_REFRESH_RATE_PCSX2"           default="true">60Hz</setting>
     <setting id="RR_SPOTIFY_BRANCH"               default="true">stable</setting>
     <setting id="RR_SPOTIFY_CLEAN_CACHE"          default="true">false</setting>
+    <setting id="RR_BRAVE_TEST_TYPE"              default="true">false</setting>
 </settings>
 
 
