@@ -1,3 +1,6 @@
+108
+- Add test type flag for Brave Browser
+
 107
 - Add option to clean Spotify cache
 
